# aiogram_transitions

./: README.md  base_machine.py  bot.py  form.py  machines_manager.py  pyproject.toml  second_machine.py  step_machine.py  transitions_filter.py  transitions_middleware.py
